[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardspine-kernel"
version = "0.2.0"
description = "Offline evidence-bundle verification and sealing for GuardSpine (Python)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "GuardSpine Team" }
]
keywords = [
    "guardspine",
    "evidence",
    "verification",
    "hash-chain",
    "integrity"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/guardspine_kernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
